--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="wrapper">
             <h1>MBj Gameworks</h1>
-            <p>Waifu Island Developers</p>
+            <p>Mobile App Developers</p>
         </div>
     </body>
 </html>
